--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta property="og:title" content="101Labs - Educate Your Community" />
     <meta property="og:site_name" content="101Labs" />
     <meta property="og:url" content="https://www.101labs.org/" />
-    <meta property="og:description" content="We are the educational hub of your project." />
+    <meta property="og:description" content="Educational hub for your project." />
     <meta property="og:image" content="./assets/favicon.ico" />
     <link href="assets/style.css?v=1.0" rel="stylesheet">
     <link rel="shortcut icon" type="image/x-icon" href="assets/favicon.ico" />
